<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/masterFragmentRegular"
    tools:context=".MainActivityFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/overall_structure"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:id="@+id/name1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/player1"
                android:id="@+id/firstButton"
                android:background="@drawable/buttonborder"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:id="@+id/name2" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/player2"
                android:id="@+id/secondButton"
                android:background="@drawable/buttonborder"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:layout_gravity="center_horizontal"
            android:id="@+id/name3" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/player3"

                android:id="@+id/thirdButton"
                android:background="@drawable/buttonborder"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
